# pyFlowDroid

./: .flake8  .gitignore  LICENSE  Makefile  README.md  analyze.py  download_apk.py  install.py  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  settings.py
pyflowdroid/: __init__.py  __main__.py  _cli_tools.py  analyze.py  consts.py  download.py  install.py
sources_sinks/: large.txt  small.txt
