[tool.poetry]
name = "pyflowdroid"
version = "0.2.0"
description = "Python wrapper to use FlowDroid APK analyzer."
authors = ["Gustavo Viera López <gvieralopez@gmail.com>"]
# New attributes
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gvieralopez/pyFlowDroid"
repository = "https://github.com/gvieralopez/pyFlowDroid"
keywords = ["apk", "flow analyisis", "android"]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.4.1"
progressbar = "^2.5"
beautifulsoup4 = "^4.11.1"
lxml = "^4.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
mypy = "^0.941"
black = "^22.1.0"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
flake8-fixme = "^1.1.1"
flake8-bugbear = "^22.3.20"
flake8-eradicate = "^1.2.0"
flake8-cognitive-complexity = "^0.1.0"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
